@@ -18,7 +18,8 @@
 
 package com.publicissapient.kpidashboard.apis.jira.scrum.service.release;
 
-import java.util.AbstractMap;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -27,6 +28,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.model.EpicMetaData;
+import com.publicissapient.kpidashboard.common.util.DateUtil;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,7 +37,6 @@ import org.springframework.stereotype.Component;
 
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.impl.CommonServiceImpl;
-import com.publicissapient.kpidashboard.apis.enums.Filters;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
@@ -72,6 +74,7 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 	private static final String TO_DO = "To Do";
 	private static final String IN_PROGRESS = "In Progress";
 	private static final String DONE = "Done";
+	private static final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern(DateUtil.DATE_FORMAT);
 	@Autowired
 	private JiraIssueRepository jiraIssueRepository;
 
@@ -116,7 +119,8 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 					&& jiraIssueReleaseStatus != null) {
 				Map<String, String> epicWiseIssueSize = createDataCountGroupMap(releaseIssues, jiraIssueReleaseStatus,
 						epicIssues, fieldMapping, filterDataList);
-				populateExcelDataObject(requestTrackerId, excelData, epicWiseIssueSize, epicIssues,jiraIssueReleaseStatus,releaseIssues);
+				populateExcelDataObject(requestTrackerId, excelData, epicWiseIssueSize, epicIssues,
+						jiraIssueReleaseStatus, releaseIssues);
 				kpiElement.setSprint(latestRelease.getName());
 				kpiElement.setModalHeads(KPIExcelColumn.EPIC_PROGRESS.getColumns());
 				kpiElement.setExcelColumns(KPIExcelColumn.EPIC_PROGRESS.getColumns());
@@ -142,7 +146,7 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 			// get Epics Linked to release stories
 			resultListMap.put(EPIC_LINKED,
 					jiraIssueRepository.findNumberInAndBasicProjectConfigIdAndTypeName(
-							releaseIssues.stream().map(JiraIssue::getEpicLinked).collect(Collectors.toList()),
+							releaseIssues.stream().map(JiraIssue::getEpicLinked).toList(),
 							leafNode.getProjectFilter().getBasicProjectConfigId().toString(),
 							NormalizedJira.ISSUE_TYPE.getValue()));
 			// get status category of the project
@@ -172,15 +176,14 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 		Map<String, List<JiraIssue>> epicWiseJiraIssues = jiraIssueList.stream()
 				.filter(jiraIssue -> jiraIssue.getEpicLinked() != null)
 				.collect(Collectors.groupingBy(JiraIssue::getEpicLinked));
-		Map<String, Map.Entry<String, String>> epicIssueMap = epicIssues.stream()
-				.collect(Collectors.toMap(JiraIssue::getNumber,
-						jiraIssue -> new AbstractMap.SimpleEntry<>(jiraIssue.getName(), jiraIssue.getUrl())));
+		Map<String, EpicMetaData> epicIssueMap = epicIssues.stream().collect(Collectors.toMap(JiraIssue::getNumber,
+				jiraIssue -> new EpicMetaData(jiraIssue.getName(), jiraIssue.getUrl(), jiraIssue.getCreatedDate())));
 		List<DataCount> dataCountList = new ArrayList<>();
 		Map<String, String> epicWiseSize = new HashMap<>();
 		epicWiseJiraIssues.forEach((epic, issues) -> {
 			if (epicIssueMap.containsKey(epic)) {
-				Map.Entry<String, String> epicNameUrl = epicIssueMap.get(epic);
-				DataCount statusWiseCountList = getStatusWiseCountList(issues, jiraIssueReleaseStatus, epicNameUrl,
+				EpicMetaData epicMetaData = epicIssueMap.get(epic);
+				DataCount statusWiseCountList = getStatusWiseCountList(issues, jiraIssueReleaseStatus, epicMetaData,
 						fieldMapping);
 				epicWiseSize.put(epic, String.valueOf(statusWiseCountList.getSize()));
 				dataCountList.add(statusWiseCountList);
@@ -206,11 +209,12 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 	 * @return DataCount
 	 */
 	DataCount getStatusWiseCountList(List<JiraIssue> jiraIssueList, JiraIssueReleaseStatus jiraIssueReleaseStatus,
-			Map.Entry<String, String> epic, FieldMapping fieldMapping) {
+			EpicMetaData epic, FieldMapping fieldMapping) {
 		DataCount issueCountDc = new DataCount();
 		List<DataCount> issueCountDcList = new ArrayList<>();
-		String name = epic.getKey();
-		String url = epic.getValue();
+		String name = epic.getName();
+		String url = epic.getUrl();
+		String createdDate = epic.getCreatedDate();
 		// filter by to do category
 		List<JiraIssue> toDoJiraIssue = ReleaseKpiHelper.filterIssuesByStatus(jiraIssueList,
 				jiraIssueReleaseStatus.getToDoList());
@@ -246,6 +250,7 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 		issueCountDc.setValue(issueCountDcList);
 		issueCountDc.setKpiGroup(name);
 		issueCountDc.setUrl(url);
+		issueCountDc.setCreatedDate(createdDate);
 		return issueCountDc;
 	}
 
@@ -276,21 +281,28 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 	}
 
 	/**
-	 * sort in reverse order on the basis of those epic whose to do and in progress
-	 * issues are more should appear first
-	 * 
+	 * sort in reverse order on the basis of created date of epics in reverse order
+	 * and then on the basis of those epics whose to do and in progress issues are
+	 * more should appear first
+	 *
 	 * @param dataCountList
 	 */
 	void sorting(List<DataCount> dataCountList) {
 		if (CollectionUtils.isNotEmpty(dataCountList))
-			dataCountList.sort(Comparator.comparing(data -> ((List<DataCount>) data.getValue()).stream()
-					.filter(subfilter -> subfilter.getSubFilter().equalsIgnoreCase(TO_DO)
-							|| subfilter.getSubFilter().equalsIgnoreCase(IN_PROGRESS))
-					.mapToLong(a -> (long) a.getValue()).sum()));
+			dataCountList.sort(Comparator.comparing(
+					(DataCount dataCount) -> LocalDate.parse(dataCount.getCreatedDate().split("T")[0], dateFormatter))
+					.thenComparingLong(data ->
+					// Calculate the sum of values for specified subFilters
+					((List<DataCount>) data.getValue()).stream()
+							.filter(subfilter -> subfilter.getSubFilter().equalsIgnoreCase(TO_DO)
+									|| subfilter.getSubFilter().equalsIgnoreCase(IN_PROGRESS))
+							.mapToLong(a -> (long) a.getValue()).sum()));
+
 	}
 
 	private void populateExcelDataObject(String requestTrackerId, List<KPIExcelData> excelData,
-			Map<String, String> epicWiseIssueSize, Set<JiraIssue> epicIssues,JiraIssueReleaseStatus jiraIssueReleaseStatus, List<JiraIssue> totalIssues) {
+			Map<String, String> epicWiseIssueSize, Set<JiraIssue> epicIssues,
+			JiraIssueReleaseStatus jiraIssueReleaseStatus, List<JiraIssue> totalIssues) {
 		if (requestTrackerId.toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())
 				&& MapUtils.isNotEmpty(epicWiseIssueSize)) {
 			Map<String, List<JiraIssue>> epicWiseJiraIssues = totalIssues.stream()
@@ -298,7 +310,8 @@ public class ReleaseEpicProgressServiceImpl extends JiraReleaseKPIService {
 					.collect(Collectors.groupingBy(JiraIssue::getEpicLinked));
 			Map<String, JiraIssue> epicWiseJiraIssue = epicIssues.stream()
 					.collect(Collectors.toMap(JiraIssue::getNumber, jiraIssue -> jiraIssue));
-			KPIExcelUtility.populateEpicProgessExcelData(epicWiseIssueSize, epicWiseJiraIssue, excelData,jiraIssueReleaseStatus,epicWiseJiraIssues);
+			KPIExcelUtility.populateEpicProgessExcelData(epicWiseIssueSize, epicWiseJiraIssue, excelData,
+					jiraIssueReleaseStatus, epicWiseJiraIssues);
 		}
 	}
 
